syntax = "proto3";

package envoy.extensions.filters.network.tcp_proxy.v3;

import "envoy/extensions/filters/network/tcp_proxy/v3/tcp_proxy.proto";

message EbpfTcpProxySKB {
  // the configuration of the underlying TcpProxy filter
  TcpProxy tcp_proxy = 1;
}
